--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "recharts": "^3.2.1",
     "simplebar-react": "^3.3.2",
     "tailwind-merge": "^3.3.1"
   },
